# simpleusdview

./: CMakeLists.txt  CMakeSettings.json  README.md  font.h  main.cpp  plugInfo.json  run_simpleusdview.bat
cmake/: FindPixarUsd.cmake
